k8s/estoque-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estoque
  labels:
    app: estoque
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estoque
  template:
    metadata:
      labels:
        app: estoque
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: estoque
          image: estoque-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
