k8s/estoque-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: estoque
  labels:
    app: estoque
spec:
  selector:
    app: estoque
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
