k8s/estoque-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estoque-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /estoque(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: estoque
                port:
                  number: 8000
